--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -20,3 +20,9 @@ steps:
     publishJUnitResults: true
     testResultsFiles: '**/surefire-reports/TEST-*.xml'
     goals: 'package'
+    steps:
+- task: DownloadPipelineArtifact@2
+  inputs:
+    artifact: WebApp
+
+  
